--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-html{
+html {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -10,48 +10,63 @@ html{
     color: #fff;
 }
 
-body{
+body {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(bg.jpg) 50% 50% no-repeat;
+    background: url(bg.jpg) 70% 50% no-repeat;
     background-size: cover;
     text-align: center;
 }
 
-.info{
+.info {
     display: flex;
     height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 60px;
+}
+
+.info__title {
+    font-size: 42px;
     font-weight: 100;
 }
 
-.socials{
+.socials {
     display: inline-grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(5, auto);
     grid-column-gap: 30px;
-    margin-top: 40px;
-    font-size: 24px;
+    margin-top: 30px;
+    position: relative;
 }
 
-.social{
+.socials:before {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: -7px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    filter: blur(10px);
+    padding: 7px;
+}
+
+.social {
     text-decoration: none;
-    color: #fff;
-    opacity: 0.8;
+    color: #000;
+    opacity: 0.75;
     transition: opacity 0.2s ease-in-out;
+    font-size: 24px;
+    position: relative;
+    z-index: 2;
+    padding: 1px;
 }
 
-.social:hover{
+.social:hover {
     opacity: 1;
-}
-
-@media screen and (max-width: 600px){
-    .info{
-        font-size: 42px;
-    }
 }
